<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="candyshop_category">CandyShop</string>
    <string name="system_category">System</string>
    <string name="quicksettings_category">QuickSettings</string>
    <string name="lockscreen_category">Lockscreen</string>
    <string name="statusbar_category">Statusbar</string>
    <string name="navigation_category">Navigation</string>
    <string name="stockroom_category">StockRoom</string>
    <string name="battery_category">Battery icon</string>
    <string name="system_bottom_nav_title">System</string>
    <string name="lockscreen_bottom_nav_title">Lockscreen</string>
    <string name="statusbar_bottom_nav_title">Statusbar</string>
    <string name="navigation_bottom_nav_title">Navigation</string>
    <string name="stockroom_bottom_nav_title">StockRoom</string>
    <string name="system_aisle_header">System - Aisle 1</string>
    <string name="lockscreen_aisle_header">Lockscreen - Aisle 2</string>
    <string name="statusbar_aisle_header">Statusbar - Aisle 3</string>
    <string name="navigation_aisle_header">Navigation - Aisle 4</string>
    <string name="stockroom_aisle_header">The StockRoom</string>
    <string name="candyshop_summary_title">Have some Candy, on us!</string>
    <string name="button_category_title">Buttons</string>
    <string name="navbar_category_title">Software keys</string>
    <string name="hwkeys_category_title">Hardware keys</string>
    <string name="hwkeys_options_title">Buttons and backlight options</string>
    <string name="media_options_category_title">Media options</string>
    <string name="sleep_controls_category_title">Sleep controls</string>
    <string name="lockscreen_security_category_title">Security options</string>
    <string name="lockscreen_icons_category_title">Manage lockscreen items</string>
    <string name="lockscreen_clock_category_title">Clock and date options</string>
    <string name="lockscreen_other_category_title">Other</string>
    <string name="notifications_category_title">System notifications</string>
    <string name="qs_cat_title">Quick settings panel</string>
    <string name="qs_layout_category_title">QS tile layout</string>
    <string name="qs_options_category_title">QS panel options</string>
    <string name="battery_style_category_title">Battery options</string>
    <string name="statusbar_options_category_title">Statusbar options</string>
    <string name="statusbar_notifications">Statusbar notifications</string>
    <string name="statusbar_notifications_title">Statusbar ticker and heads-up options</string>
    <string name="multitasking_category_title">Multi-tasking</string>
    <string name="screen_capture_options_category_title">Screen capture options</string>
    <string name="miscellaneous_category_title">Miscellaneous</string>
    <string name="ime_title">Keyboard and IME Settings</string>
    <string name="brightness_category_title">Brightness slider</string>
    <string name="animations_title">Animations</string>
    <string name="power_button_gestures_title">Power button gestures</string>
    <string name="power_button_reboot_menu_title">Power button reboot menu</string>
    <string name="app_controls_title">App controls</string>
    <string name="headset_title">Headset</string>
    <string name="button_title">Volume buttons</string>
    <string name="power_button_title">Power button</string>
    <string name="quicksettings_title">Quick settings</string>
    <string name="torch_title">Power button</string>
    <string name="battery_title">Battery settings</string>
    <string name="leds_title">Lights</string>
    <string name="network_traffic_title">Network traffic</string>
    <string name="notification_light_settings">Notifications light</string>
    <string name="powermenu_title">Power menu</string>
    <string name="navbar_title">Navbar</string>
    <string name="notifications_title">Notifications</string>
    <string name="various_system_title">Various</string>
    <string name="various_lockscreen_title">Various</string>
    <string name="various_statusbar_title">Various</string>
    <string name="various_navigation_title">Various</string>
    <string name="recent_settings_title">Recents</string>
    <string name="status_bar_clock_title">Clock options</string>
    <string name="navigationbar_settings_title">Navigation bar options</string>
    <string name="carrier_label_title">Carrier label</string>
    <string name="animations_summary">Animation options</string>
    <string name="headset_preference_summary">Headset connect options</string>
    <string name="buttons_preference_summary">Volume key behavior options</string>
    <string name="power_button_preference_summary">Power key gesture and reboot menu options</string>
    <string name="powermenu_preference_summary">Configure power menu options</string>
    <string name="leds_preference_summary">Battery and notification LED options</string>
    <string name="ls_shortcuts_preference_summary">Lockscreen bottom shorcut options</string>
    <string name="clock_preference_summary">Time and date display options</string>
    <string name="battery_preference_summary">Change icon and percentage display</string>
    <string name="net_traffic_preference_summary">Statusbar network traffic options</string>
    <string name="qs_preference_summary">Tiles, quick pulldown, brightness, transparency options</string>
    <string name="statusbar_preference_summary">Statusbar icon display options</string>
    <string name="recents_preference_summary">AOSP recents and SlimRecents options</string>
    <string name="ga_preference_summary">On-screen gesture launcher options</string>
    <string name="custom_carrier_label_preference_summary">Statusbar carrier text customization</string>
    <string name="navigationbar_settings_summary">- NavBar\n- SmartBar\n- Fling</string>
    <string name="hwkeys_options_summary">NOTE: These are device-specific!\n- Hardware key remapping\n- Hardware buttons disable\n- Swap Recents and Back\n- Button backlight brightness\n- Button backlight timeout\n- Button backlight on key touch</string>
    <string name="carrier_label_summary">Customize your statusbar carrier label</string>
    <string name="volbtn_down_zen_title">Volume down for do not disturb</string>
    <string name="volbtn_down_zen_summary">Allow volume down to enter do not disturb mode</string>
    <string name="volbtn_up_zen_title">Volume up in do not disturb</string>
    <string name="volbtn_up_zen_summary">Allow volume up to exit do not disturb mode</string>
    <string name="swap_volume_buttons">Swap volume buttons rotation based</string>
    <string name="volume_keys_swap_summary">The volume keys +/- will swap when the device is rotated to landscape orientation</string>
    <string name="volume_keys_control_media_stream_title">Volume keys control media volume</string>
    <string name="volume_keys_control_media_stream_summary">Volume panel will show media volume slider by default</string>
    <string name="volume_rocker_music_controls_title">Playback control</string>
    <string name="volume_rocker_music_controls_summary">When the screen is off, long-pressing the volume keys will seek music tracks</string>
    <string name="brightness_icon_title">Brightness slider icon</string>
    <string name="brightness_icon_summary">Show an auto-brightness toggle button</string>
    <string name="qs_auto_brightness_right_title">Auto brightness icon on right</string>
    <string name="qs_auto_brightness_right_summary">Show the icon on right of the brightness slider</string>
    <string name="qs_show_brightness_buttons_title">Brightness control buttons</string>
    <string name="qs_show_brightness_buttons_summary">Show buttons beside the brightness slider to adjust brightness</string>
    <string name="qs_styles_dialog_title">Select a QS tile style</string>
    <string name="dialog_color_picker">Color Picker</string>
    <string name="press_color_to_apply">Press on color below to apply</string>
    <string name="arrow_right">→</string>
    <string name="arrow_down">↓</string>
    <string name="hex">Hex:</string>
    <string name="hex_hint">#ff000000</string>
    <string name="set">Set</string>
    <string name="color_default">Default</string>
    <string name="fp_unlock_keystore_title">FP unlock</string>
    <string name="fp_unlock_keystore_summary">Unlock device with fingerprint after reboot without PIN/Password/Pattern\nNote: at your own risk!</string>
    <string name="status_bar_tuner_title">Status bar items</string>
    <string name="status_bar_tuner_summary">Edit status bar icons and options</string>
    <string name="navbar_tuner_title">Edit navigation bar</string>
    <string name="navbar_tuner_summary">Edit the navigation bar layout and buttons</string>
    <string name="gesture_settings_title">Gestures</string>
    <string name="gesture_settings_info">Navigation bar must be disabled!\n\nAvailable gestures:\n\nBack\n- Swipe up on left or right side\n\nHome\n- Swipe up center\n\nRecent apps\n- Swipe up center and hold\n\nLong press home\n- Short swipe up and hold in the center</string>
    <string name="use_bottom_gesture_title">Navigation gestures</string>
    <string name="use_bottom_gesture_summary">Use bottom swipe up gestures for navigation</string>
    <string name="three_finger_gesture">Three finger gesture</string>
    <string name="three_finger_gesture_summary">Swipe three finger to screenshot</string>
    <string name="lock_screen_shortcuts_title">Lock screen shortcuts</string>
    <string name="lock_screen_shortcuts_summary">Manage lock screen bottom shortcuts</string>
    <string name="status_bar_battery_percentage_title">Battery percentage</string>
    <string name="status_bar_battery_percentage_default">Hidden</string>
    <string name="status_bar_battery_percentage_text_next">Next to the icon</string>
    <string name="status_bar_battery_percentage_text_inside">Inside the icon</string>
    <string name="status_bar_battery_style_title">Battery style</string>
    <string name="status_bar_battery_style_port">Portrait</string>
    <string name="status_bar_battery_style_circle">Circle</string>
    <string name="status_bar_battery_style_big_circle">Big circle</string>
    <string name="status_bar_battery_style_dotted_circle">Dotted circle</string>
    <string name="status_bar_battery_style_big_dotted_circle">Big dotted circle</string>
    <string name="status_bar_battery_style_text">Text</string>
    <string name="status_bar_battery_style_hidden">Hidden</string>
    <string name="status_bar_battery_style_q">Q style</string>
    <string name="status_bar_clock">Clock and Date</string>
    <string name="toast_icon_title">Toast app icon</string>
    <string name="toast_icon_summary">Display the app\'s icon corresponding to the toast message</string>
    <string name="notification_sound_vib_screen_on_title">Noisy notifications if screen on</string>
    <string name="notification_sound_vib_screen_on_summary">Disable to block notifications sound and vibration when the screen is awake</string>
    <string name="disable_fullscreen_keyboard_title">Disable fullscreen keyboard</string>
    <string name="disable_fullscreen_keyboard_summary">Landscape keyboard will never take up entire screen</string>
    <string name="keyboard_rotation_toggle_title">Auto keyboard rotation</string>
    <string name="keyboard_rotation_toggle_summary">Force auto-rotate when keyboard is shown</string>
    <string name="keyboard_rotation_timeout_title">Auto-rotate timeout</string>
    <string name="show_enter_key_title">Show enter key</string>
    <string name="show_enter_key_summary">Force keyboard to show enter instead of emoticon key</string>
    <string name="ime_switcher_notify">Selector notification</string>
    <string name="ime_switcher_notify_summary">Display input method selector notification</string>
</resources>